# travel_planner

./: .env.example  .gitignore  README.md  alembic.ini  mise.toml  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_preferences_and_landed_cost.py  0003_trips_and_shortlist.py
app/: cli.py  config.py  db.py  enums.py  gateways.py  main.py  models.py  preferences.py  schemas.py  seed.py  validator.py
app/api/: configs.py  copilot.py  quota.py  runs.py  trips.py
app/data/: gateway_transfers.py
app/llm/: copilot_client.py
app/orchestrator/: blackout.py  dates.py  landed_cost.py  matrix.py  (+5 more)
docs/: config-api-ui.md  design.md  design_05_25_2026.md  fare-search.md  fare-validation.md  gateway-transfers.md  itinerary-orchestration.md  landed-cost-model_05_25_2026.md  preference-elicitation_05_25_2026.md  preference-scoring_05_25_2026.md  proposal.md  proposal_05_25_2026.md  research-fli-vs-fast-flights.md  tasks.md  tasks_05_25_2026.md
italy-trip-2026/: .gitignore  01-summary.md  02-itinerary.md  03-routes-and-transit.md  04-budget.md  05-rome.md  06-bologna.md  07-lido.md  08-naples.md  09-booking.md  README.md  activities.html  adventures.html  grey.html  index.html  jude.html  keir.html  kids.css  package-lock.json  package.json  rhys.html  vite.config.js  worldschooling.html
openspec/: config.yaml
tests/: conftest.py  test_api_wizard_trips_copilot.py  test_fast_flights_contract.py  test_fast_flights_rt.py  test_fli_adapter.py  test_fli_contract.py  test_gateway_transfers.py  test_landed_cost.py  test_migrations.py  test_orchestrator.py  test_preferences.py  test_router.py  test_runner_end_to_end.py  test_runner_landed_cost_e2e.py  test_serpapi_adapter.py  test_stopover.py  test_validator.py  test_venice_seed_e2e.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+120 files in other folders)
