[project]
name = "trip-planner"
version = "0.1.0"
description = "Multi-Leg Flight Fare Orchestrator (MLFO) — Phase 1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "jinja2>=3.1",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "typer>=0.15",
    "fast-flights",
    "flights",
    "serpapi>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
trip-planner = "app.cli:cli"

[tool.uv.sources]
fast-flights = { git = "https://github.com/thoughtpunch/flights" }
flights = { git = "https://github.com/punitarani/fli" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
